# spectrocube

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  SPEC.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml
cli/: index.html
docs/: cli.md  index.md  reference.md  spec.md  usage.md
reference/: index.html
search/: search_index.json
spec/: index.html
src/spectrocube/: __init__.py  cli.py  core.py  example_spectrocube.py
styles/: brand.css
stylesheets/: extra.css
tests/: test_cli.py  test_core.py
usage/: index.html
