[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrocube"
version = "0.1.0"
description = "Lightweight standard for calibrated spectroscopic datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arseniy Kuzmin", email = "you@example.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "xarray",
    "netcdf4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "ipython",
  "ipykernel",
  "jupyter",
  "matplotlib",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions",
  "mdx_truly_sane_lists",
  "mkdocs-glightbox",
]

[project.scripts]
spectrocube-info = "spectrocube.cli:info_main"
spectrocube-validate = "spectrocube.cli:validate_main"

[project.urls]
Homepage = "https://github.com/queezz/spectrocube"
Repository = "https://github.com/queezz/spectrocube"
Issues = "https://github.com/queezz/spectrocube/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP","W","C90"]
lint.ignore = ["E203","E266","E501"]
src = ["src"]
exclude = [".venv", "venv", "*.egg-info", ".tox", "build", "dist"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
